DATE        AUTHOR      CHANGE
---------- -----------  --------------------------------------------------------
2003-01-10 allenb       Added an example that makes a tree from scratch.
                        Added node and doc constructors that take the name
                        of the new node.
2003-01-06 allenb       Added general project documentation in the form of
                        .dox files in the doc/dox directory.  Modified doxy
						config file to parse these files for documentation.
2003-01-03 nonchocoboy  Removed the XML prefix on the class names.
2003-01-02 nonchocoboy  Brought the VC7 build up to date.
                        NEW VERSON: 0.1.0
2003-01-02 nonchocoboy  Moved implementation code out of the headers to make
                        building as a shared library easier.
2003-01-02 nonchocoboy  Removed xml_char_type and XMLString typedefs.
2002-12-02 nonchocoboy  Specialization of XMLAttribute::getValue<T> for
                        std::string added so that more than the first word of
                        the attribute string can be retrieved.
2002-12-02 nonchocoboy  Added versioning information.
                        NEW VERSION: 0.0.1
2002-05-06 subatomic    Added README and build instructions
2002-05-05 subatomic    Brought the code up to coding standard (API changed!).
2002-05-05 subatomic    Added build system based on Doozer gnumake tools
                        support irix, linux, solaris, freebsd, win32 under
                        cygwin, probably other too but untested see README.
2002-05-05 allenb       Added save_file method for document node.
2002-05-01 subatomic    Added predicate.h, and two predicates
2002-04-05 allenb       Fix EOF and -1 chars on Irix.
2002-04-03 allenb       Added Node::getChild(char*) to avoid matching templated
                        predicate version.
2002-02-19 allenb       cppdom_boost::shared_ptr (no conflict with real boost)
2002-02-09 subatomic    const correctness, coding style